Bug fix: The modal was being partially hidden
Changing the Z index means the nutrition information modal will not be
hidden by the query box.

--- a/public/style.css
+++ b/public/style.css
@@ -99,6 +99,7 @@
   left: 0px;
   right: 0px;
   position: absolute;
+  z-index: 1;
 }
 
 .nutrition-information {
